# junction25

./: .gitignore  README.md  backend_api.py  liquidity_risk_analysis.json  load_to_sqlite.py  rag_pipeline.py  requirements.txt
risk-graphrag-project/: .env  PROJECT_SUMMARY.md  main.py  pyproject.toml  run_dashboard.py  settings.yaml  test_gemini.py  test_litellm_gemini.py
risk-graphrag-project/config/: risk_categories.yaml
risk-graphrag-project/input/: 01_2011.m12.di.json.txt  01_2012.m5_en.di.json.txt  01_2014.m9_en.di.json.txt  01_2025.M1_en.di.json.txt  02_2025.m1.di.json.txt  03_2011.m15.di.json.txt  03_2023.m1.di.json.txt  04_2011.m2.di.json.txt  04_2014.m11.di.json.txt  04_2015.m7.di.json.txt  04_2023.m3_en.di.json.txt  08_2014.m6_en.di.json.txt  08_2018.M1.di.json.txt  10_2012.m2_en.di.json.txt  13_2012.M4.di.json.txt  13_2013.m3.di.json.txt  14_2012_m8.di.json.txt  1501_2001_amendments_up_to_642_2006.di.json.txt  1502_2001_amendments_up_to_409_2019.di.json.txt  151_2022.di.json.txt  15_2012.m7.di.json.txt  16_2012.m4.di.json.txt  186_2023.di.json.txt  19_2013.m4.di.json.txt  1_2019.m2.di.json.txt  2012_07.M2_en.di.json.txt  2015_03.m4_en.di.json.txt  2015_06.m4.di.json.txt  2015_07.m2.di.json.txt  2016_01.m1.di.json.txt  2016_02.m4.di.json.txt  2016_03.m1.di.json.txt  2016_06.m2_en.di.json.txt  2016_08.m4.di.json.txt  2016_09.m1.di.json.txt  2017_02.m2.di.json.txt  2017_10.m1.di.json.txt  2018_04.m3_en.di.json.txt  2018_07.m6-fi.di.json.txt  2024-_03.m1.di.json.txt  (+54 more)
risk-graphrag-project/input_small/: 01_2014.m1_en.di.json.txt  01_2023.m1.di.json.txt
(+3563 files in other folders)
