[project]
name = "risk-graphrag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphrag>=2.7.0",
    "networkx>=3.5",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "umap-learn>=0.5.9.post2",
]
